⚔️ Mastery mastery-2-2 `AutoCloseable`close method and exception handling